# const-writer

./: .gitignore  Cargo.toml  README.md
examples/: main.rs
src/: lib.rs  slice.rs  vec.rs
