[package]
name = "const-writer"
version = "0.1.0"
authors = ["Zettroke <skorostnoy2000@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
all = ["bytes-writer"]
bytes-writer = ["bytes"]

[dependencies]
bytes = { version = "1", optional = true }

[dev-dependencies]
#trybuild = "1.0.40"
bytes = { version = "1" }