[package]
name = "const-writer"
version = "0.1.0"
authors = ["Zettroke <skorostnoy2000@yandex.ru>"]
edition = "2018"
repository = "https://github.com/Zettroke/const-writer/"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Zettroke"
description = "Compile time checked byte manipulations"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []
alloc = []

[dependencies]

[dev-dependencies]
bytes = "1"